--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ class_materials/
 # Ignore Python cache files
 __pycache__/
 *.pyc
+.env
+.env
+.env
+ssh key post exposure
+ssh key post exposure.pub
